--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="fixed-top">
         <div class="container-fluid text-bg-dark d-flex justify-content-end">
             <div class="col-1">
-                <img src="./img/sony_logo.svg" alt="sony_logo" class="float-end height_10 my-1">
+                <img src="./img/sony_logo.svg" alt="sony_logo" class="float-end ms_height_10 my-1">
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
@@ -138,6 +138,34 @@
             </div>
         </nav>
     </header>
+
+    <main class="ms_mt_84">
+        <section class="ms_jumbo pb-4">
+            <div class="container ms_height ms_sm_height d-flex flex-column justify-content-end">
+                <div class="row">
+                    <div class="col-8 col-lg-4 py-1">
+                        <img src="./img/returnal-hero-banner-logo.png" alt="returnal-hero-banner-logo" width="100%">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 py-1">
+                        <h1 class="text-white">Rompi il cerchio</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-5 py-1">
+                        <p class="text-white ms_fs_10 ms_fs_sm_16">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col py-1">
+                        <button type="button" class="btn btn-danger">Acquista ora</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
