--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body>
     <header class="fixed-top">
         <div class="container-fluid text-bg-dark d-flex justify-content-end">
-            <div class="col-1">
-                <img src="./img/sony_logo.svg" alt="sony_logo" class="float-end ms_height_10 my-1">
-            </div>
+            <img src="./img/sony_logo.svg" alt="sony_logo" class="ms_height_10 my-2">
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -139,7 +137,7 @@
         </nav>
     </header>
 
-    <main class="ms_mt_84">
+    <main class="ms_mt_main">
         <section class="ms_jumbo pb-4">
             <div class="container ms_height ms_sm_height d-flex flex-column justify-content-end">
                 <div class="row">
@@ -160,6 +158,31 @@
                 <div class="row">
                     <div class="col py-1">
                         <button type="button" class="btn btn-danger">Acquista ora</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-3">
+            <div class="container">
+                <div class="row g-3">
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5" class="rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5" class="rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5" class="rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
                     </div>
                 </div>
             </div>
