--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-5 py-1">
-                        <p class="text-white ms_fs_10 ms_fs_sm_16">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                        <p class="text-white ms_fs_10 ms_fs_sm_16">Rialzati dopo ogni sconfitta e affronta una nuova
+                            sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in
+                            esclusiva su PS5.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -167,22 +169,91 @@
             <div class="container">
                 <div class="row g-3">
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5" class="rounded">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5"
+                            class="rounded">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5" class="rounded">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5"
+                            class="rounded">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5" class="rounded">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing-thumb-01-ps5"
+                            class="rounded">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet-and-clank-rift-apart-keyart" class="rounded">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-3">
+            <div class="container">
+                <div class="row text-center">
+                    <h6 class="text-primary ms_fs_10 m-0">PLAY HAS NO LIMITS</h6>
+                </div>
+                <div class="row text-center">
+                    <h2>Ecco la PlayStation 5</h2>
+                </div>
+                <div class="row text-center">
+                    <p class="text-grey ms_fs_12 ms_fs_sm_16">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                </div>
+            </div>
+
+            <div class="container py-5">
+                <div class="row align-items-center">
+                    <div class="col-12 col-md-5">
+                        <div class="row">
+                            <h2>Console PlayStation 5</h2>
+                        </div>
+                        <div class="row">
+                            <p class="text-grey ms_fs_12 ms_fs_sm_16">Sperimenta la nuova generazione di incredibili giochi
+                                PlayStation.</p>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <button type="button" class="btn btn-primary">Maggiori informazioni</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-7">
+                        <div class="col">
+                            <img src="./img/playstation-5-thumb.png" alt="playstation-5-thumb">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row justify-content-md-between">
+                    <div class="col-4 col-md-2 col-md text-center border-bottom border-primary">
+                        <img src="./img/playstation-5-thumb.png" alt="playstation-5-thumb">
+                        <div class="d-none d-md-block">Console PS5</div>
+                    </div>
+                    <div class="col-4 col-md-2 col-md text-center">
+                        <img src="./img/joypad-thumb.png" alt="joypad-thumb">
+                        <div class="d-none d-md-block">Controller wireless DualSense&trade;</div>
+                    </div>
+                    <div class="col-4 col-md-2 col-md text-center">
+                        <img src="./img/headset-thumb.png" alt="headset-thumb">
+                        <div class="d-none d-md-block">Cuffie wireless con microfono PULSE 3&trade;</div>
+                    </div>
+                    <div class="col-4 col-md-2 col-md text-center">
+                        <img src="./img/remote-thumb.png" alt="remote-thumb">
+                        <div class="d-none d-md-block">Telecomando Media</div>
+                    </div>
+                    <div class="col-4 col-md-2 col-md text-center">
+                        <img src="./img/camera-thumb.jpg" alt="camera-thumb">
+                        <div class="d-none d-md-block">Telecamera HD</div>
                     </div>
                 </div>
             </div>
