--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
                     <h2>Ecco la PlayStation 5</h2>
                 </div>
                 <div class="row text-center">
-                    <p class="text-grey ms_fs_12 ms_fs_sm_16">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                    <p class="text-grey ms_fs_12 ms_fs_sm_16">Tuffati in nuove possibilità di gioco completamente
+                        inaspettate</p>
                 </div>
             </div>
 
@@ -216,7 +217,8 @@
                             <h2>Console PlayStation 5</h2>
                         </div>
                         <div class="row">
-                            <p class="text-grey ms_fs_12 ms_fs_sm_16">Sperimenta la nuova generazione di incredibili giochi
+                            <p class="text-grey ms_fs_12 ms_fs_sm_16">Sperimenta la nuova generazione di incredibili
+                                giochi
                                 PlayStation.</p>
                         </div>
                         <div class="row">
@@ -254,6 +256,33 @@
                     <div class="col-4 col-md-2 col-md text-center">
                         <img src="./img/camera-thumb.jpg" alt="camera-thumb">
                         <div class="d-none d-md-block">Telecamera HD</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="ms_two py-3">
+            <div class="container ms_height_two">
+                <div class="row">
+                    <div class="col-7 col-lg-3 py-1">
+                        <img src="./img/it-takes-two-logo.png" alt="it-takes-two-logo" width="100%">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-5 py-1">
+                        <h1 class="text-white">Un'avventura cooperativa selvaggia ti attende</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-5 py-1">
+                        <p class="text-white ms_fs_10 ms_fs_sm_16">Trova un amico e partite insieme per l'avventura più
+                            folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che
+                            stravolge il suo genere.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col py-1">
+                        <button type="button" class="btn btn-danger">Acquista ora</button>
                     </div>
                 </div>
             </div>
