--- a/index.html
+++ b/index.html
@@ -287,6 +287,71 @@
                 </div>
             </div>
         </section>
+
+        <section class="bg-dark text-white py-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h4>Nuove uscite</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <h6 class="ms_fs_15">Giochi incredibili per PS4 e PS5 disponibili ora</h6>
+                    </div>
+                </div>
+                <div class="row g-3">
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
