--- a/index.html
+++ b/index.html
@@ -352,6 +352,39 @@
                 </div>
             </div>
         </section>
+
+        <section class="py-3">
+            <div class="container">
+                <div class="row text-center">
+                    <h2>Esplora PlayStation&reg; 4</h2>
+                </div>
+                <div class="row text-center">
+                    <p class="text-grey ms_fs_12 ms_fs_sm_16">Giochi incredibili e intrattenimento senza fine.<br>Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-4 pt-3">
+                        <img src="./img/ps4-slim-homepage-image-block.jpg" alt="ps4-slim-homepage-image-block">
+                        <h2>PlayStation 4</h2>
+                        <div class="ms_fs_12 ms_fs_sm_16">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</div>
+                        <button type="button" class="btn btn-primary my-2">Scopri di più</button>
+                    </div>
+                    <div class="col-12 col-md-4 pt-3">
+                        <img src="./img/double11-202010-tw-psvr.jpg" alt="double11-202010-tw-psvr">
+                        <h2>PlayStation VR</h2>
+                        <div class="ms_fs_12 ms_fs_sm_16">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</div>
+                        <button type="button" class="btn btn-primary my-2">Scopri di più</button>
+                    </div>
+                    <div class="col-12 col-md-4 pt-3">
+                        <img src="./img/dualshock-4-listing-thumb.jpg" alt="dualshock-4-listing-thumb">
+                        <h2>Accessori</h2>
+                        <div class="ms_fs_12 ms_fs_sm_16">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</div>
+                        <button type="button" class="btn btn-primary my-2">Scopri di più</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
