--- a/index.html
+++ b/index.html
@@ -385,6 +385,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="ms_bg_darkgrey">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
+                        <img src="./img/ps-plus-logo.png" alt="ps-plus-logo" class="my-3 ms_width_60">
+                        <div class="ms_fs_10 ms_fs_sm_16 my-3">
+                            Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.
+                        </div>
+                        <button type="button" class="btn btn-light text-primary my-3 ms_fillcontent">Esplora PlayStation Plus</button>
+                    </div>
+                    <div class="col-6 d-none d-md-block">
+                        <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="ps-plus-april-monthly-games-featured-image-block">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
