--- a/index.html
+++ b/index.html
@@ -402,6 +402,26 @@
                 </div>
             </div>
         </section>
+
+        <section class="py-3">
+            <div class="container text-center">
+                <h2>Nuovi sconti sul PlayStation Store</h2>
+                <div class="ms_fs_14 ms_fs_sm_16 py-3">
+                    Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.
+                </div>
+                <div class="row g-4">
+                    <div class="col-12 col-md-4">
+                        <img src="./img/playstation-store-games-under-20-spotlight.jpg" alt="playstation-store-games-under-20-spotlight">
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="playstation-store-golden-week-sale-spotlight">
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="./img/playstation-store-free-to-play-spotlight.png" alt="playstation-store-free-to-play-spotlight">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
