--- a/index.html
+++ b/index.html
@@ -422,6 +422,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="ms_bg_darkblue">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
+                        <img src="./img/ps-now-logo-two-column.png" alt="ps-now-logo-two-column.png" class="my-3 ms_width_60">
+                        <div class="ms_fs_10 ms_fs_sm_16 my-3 text-white">
+                            Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                        </div>
+                        <button type="button" class="btn btn-light my-3 ms_fillcontent">Esplora PlayStation Now</button>
+                    </div>
+                    <div class="col-6 d-none d-md-block">
+                        <img src="./img/ps-now-april-featured-image-block.png" alt="ps-now-april-featured-image-block.png">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
