--- a/index.html
+++ b/index.html
@@ -439,6 +439,26 @@
                 </div>
             </div>
         </section>
+
+        <section class="pb-4">
+            <div class="container text-center">
+                <h4 class="my-5">Seguici sui social media</h4>
+                <div class="row g-3 justify-content-center">
+                    <div class="col-6 col-sm-3 col-md-2">
+                        <img src="./img/twitter.jpg" alt="twitter">
+                    </div>
+                    <div class="col-6 col-sm-3 col-md-2">
+                        <img src="./img/facebook.jpg" alt="facebook">
+                    </div>
+                    <div class="col-6 col-sm-3 col-md-2">
+                        <img src="./img/instagram.jpg" alt="instagram">
+                    </div>
+                    <div class="col-6 col-sm-3 col-md-2">
+                        <img src="./img/youtube.png" alt="youtube">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
