--- a/index.html
+++ b/index.html
@@ -302,51 +302,63 @@
                 </div>
                 <div class="row g-3">
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
                         <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
                         <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
                         <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
                         <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
                         <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
                         <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
                         <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
                         <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
                         <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
                         <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater-1-2-store-art" class="rounded">
                         <div>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4-its-about-time-store-art" class="rounded">
                         <div>Crash Bandicoot 4: It's About Time</div>
                     </div>
                 </div>
@@ -359,7 +371,8 @@
                     <h2>Esplora PlayStation&reg; 4</h2>
                 </div>
                 <div class="row text-center">
-                    <p class="text-grey ms_fs_12 ms_fs_sm_16">Giochi incredibili e intrattenimento senza fine.<br>Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
+                    <p class="text-grey ms_fs_12 ms_fs_sm_16">Giochi incredibili e intrattenimento senza fine.<br>Non
+                        c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
                 </div>
             </div>
             <div class="container">
@@ -367,7 +380,8 @@
                     <div class="col-12 col-md-4 pt-3">
                         <img src="./img/ps4-slim-homepage-image-block.jpg" alt="ps4-slim-homepage-image-block">
                         <h2>PlayStation 4</h2>
-                        <div class="ms_fs_12 ms_fs_sm_16">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</div>
+                        <div class="ms_fs_12 ms_fs_sm_16">Giochi incredibili live su PS4, con 1 TB di spazio di
+                            archiviazione.</div>
                         <button type="button" class="btn btn-primary my-2">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4 pt-3">
@@ -379,7 +393,8 @@
                     <div class="col-12 col-md-4 pt-3">
                         <img src="./img/dualshock-4-listing-thumb.jpg" alt="dualshock-4-listing-thumb">
                         <h2>Accessori</h2>
-                        <div class="ms_fs_12 ms_fs_sm_16">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</div>
+                        <div class="ms_fs_12 ms_fs_sm_16">Migliora la tua esperienza PS4 con una gamma di accessori
+                            ufficiali.</div>
                         <button type="button" class="btn btn-primary my-2">Scopri di più</button>
                     </div>
                 </div>
@@ -392,12 +407,15 @@
                     <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
                         <img src="./img/ps-plus-logo.png" alt="ps-plus-logo" class="my-3 ms_width_60">
                         <div class="ms_fs_10 ms_fs_sm_16 my-3">
-                            Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.
+                            Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi
+                            mensili, sconti esclusivi e altro ancora.
                         </div>
-                        <button type="button" class="btn btn-light text-primary my-3 ms_fillcontent">Esplora PlayStation Plus</button>
+                        <button type="button" class="btn btn-light text-primary my-3 ms_fillcontent">Esplora PlayStation
+                            Plus</button>
                     </div>
                     <div class="col-6 d-none d-md-block">
-                        <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="ps-plus-april-monthly-games-featured-image-block">
+                        <img src="./img/ps-plus-april-monthly-games-featured-image-block.png"
+                            alt="ps-plus-april-monthly-games-featured-image-block">
                     </div>
                 </div>
             </div>
@@ -411,13 +429,16 @@
                 </div>
                 <div class="row g-4">
                     <div class="col-12 col-md-4">
-                        <img src="./img/playstation-store-games-under-20-spotlight.jpg" alt="playstation-store-games-under-20-spotlight">
+                        <img src="./img/playstation-store-games-under-20-spotlight.jpg"
+                            alt="playstation-store-games-under-20-spotlight">
                     </div>
                     <div class="col-12 col-md-4">
-                        <img src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="playstation-store-golden-week-sale-spotlight">
+                        <img src="./img/playstation-store-golden-week-sale-spotlight.jpg"
+                            alt="playstation-store-golden-week-sale-spotlight">
                     </div>
                     <div class="col-12 col-md-4">
-                        <img src="./img/playstation-store-free-to-play-spotlight.png" alt="playstation-store-free-to-play-spotlight">
+                        <img src="./img/playstation-store-free-to-play-spotlight.png"
+                            alt="playstation-store-free-to-play-spotlight">
                     </div>
                 </div>
             </div>
@@ -427,14 +448,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
-                        <img src="./img/ps-now-logo-two-column.png" alt="ps-now-logo-two-column.png" class="my-3 ms_width_60">
+                        <img src="./img/ps-now-logo-two-column.png" alt="ps-now-logo-two-column.png"
+                            class="my-3 ms_width_60">
                         <div class="ms_fs_10 ms_fs_sm_16 my-3 text-white">
-                            Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                            Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2
+                            su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
                         </div>
                         <button type="button" class="btn btn-light my-3 ms_fillcontent">Esplora PlayStation Now</button>
                     </div>
                     <div class="col-6 d-none d-md-block">
-                        <img src="./img/ps-now-april-featured-image-block.png" alt="ps-now-april-featured-image-block.png">
+                        <img src="./img/ps-now-april-featured-image-block.png"
+                            alt="ps-now-april-featured-image-block.png">
                     </div>
                 </div>
             </div>
@@ -460,6 +484,66 @@
             </div>
         </section>
     </main>
+
+    <footer class="ms_bg_blue py-5 text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/ps-footer.svg" alt="ps-footer" class="ms_psfooter">
+                        </div>
+                        <div class="row my-4">
+                            <div class="col">
+                                <img src="./img/language-globe.svg" alt="language-globe" class="d-inline language">
+                                <div class="d-inline">Country/Region: Italy</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="row">
+                        <div class="col-12 col-md-4 mt-2">
+                            <ul class="ms_ulreset">
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4 mt-2">
+                            <ul class="ms_ulreset">
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4 mt-2">
+                            <ul class="ms_ulreset">
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 mt-4">
+                    <img src="./img/sie-logo.svg" alt="sie-logo" class="ms_sie">
+                    <div class="fs-6">
+                        Website &copy;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi
+                        dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini
+                        associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi
+                        proprietari. Tutti i diritti riservati. <a href="#" class="text-white">Maggiori info</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
